# handler/user_handler.go
@@ -3,9 +3,10 @@ package handler
 import (
 	"bytes"
 	"encoding/json"
+	"net/http"
+
 	"github.com/TPM-Project-Larces/agent.git/schemas"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
 // @BasePath /
@@ -131,34 +132,6 @@ func GetUserByUsername(ctx *gin.Context) {
 	}
 
 	ctx.JSON(200, gin.H{"message": "user", "user": user})
-}
-
-// @BasePath /
-// @Summary Get all users
-// @Description Get all users
-// @Tags User
-// @Produce json
-// @Success 200 {object} schemas.ListUsersResponse
-// @Failure 400 {string} string "bad_request"
-// @Failure 500 {string} string "internal_server_rror"
-// @Router /user [get]
-func GetUsers(ctx *gin.Context) {
-	ctx.Request.ParseMultipartForm(10 << 20)
-
-	token, err := Auth()
-	if err != nil {
-		response(ctx, 500, "internal_server_error", nil)
-		return
-	}
-
-	url := "http://localhost:5000/user"
-	users, err := sendGetRequest(token, url)
-	if err != nil {
-		response(ctx, 500, "users_not_get", nil)
-		return
-	}
-
-	ctx.JSON(200, gin.H{"message": "all_users", "users": users})
 }
 
 // @BasePath /
