# router/file_routes.go
@@ -9,9 +9,7 @@ func fileRoutes(router *gin.Engine, basePath string, pathResource string) {
 
 	file := router.Group(basePath + pathResource)
 	{
-		file.GET("", handler.GetFiles)
 		file.GET("/by_username", handler.GetFilesByUsername)
-		file.POST("/delete_file", handler.DeleteFile)
 		file.GET("/by_name", handler.GetFileByName)
 	}
 }
